--- a/css/variables.css
+++ b/css/variables.css
@@ -4,7 +4,7 @@
 
   /* Layouts */
 
-  --NAVBAR-SCREEN-MOBILE: block;
+  /* --NAVBAR-SCREEN-MOBILE: block; */
   --NAVBAR-SCREEN-LARGE: none;
 
   --GRID-LAYOUT-FEATURE01: repeat(1, 1fr);
@@ -77,7 +77,7 @@
   --GAP-LARGE: 5rem;
   --PADDING-BLOCK-CARD: 6rem;
   --PADDING-INLINE-CARD: 3.6rem;
-  --PADDING-BLOCK-HEADER: 2.5rem;
+  --PADDING-BLOCK-HEADER: 1.75rem;
   --PADDING-BLOCK-LARGE: 6rem;
 
   --BORDER-CARD-LIGHT: 1px solid rgba(255, 255, 255, 0.2);
@@ -135,7 +135,7 @@
     --GAP-LARGE: 8rem;
     --PADDING-BLOCK-CARD: 6rem;
     --PADDING-INLINE-CARD: 3.6rem;
-    --PADDING-BLOCK-HEADER: 2.5rem;
+    /* --PADDING-BLOCK-HEADER: 1.5rem; */
     --PADDING-BLOCK-LARGE: 8rem;
   
     --BORDER-CARD-LIGHT: 1px solid rgba(255, 255, 255, 0.2);
