--- a/css/reusables.css
+++ b/css/reusables.css
@@ -1,4 +1,5 @@
 .section {
+    position: relative;
     padding-block: var(--PADDING-BLOCK-LARGE);
 }
 
@@ -6,7 +7,8 @@
     width: 100%;
     max-width: 1080px;
     margin-inline: auto;
-    padding-inline: 1rem;
+    padding-inline: clamp(1rem, 3.2vw, 2rem);
+    /* padding-inline: 1rem; */
 }
 
 .mobile__navIcon_wrapper {
@@ -141,4 +143,8 @@
 
 .txt__transform {
     text-transform: uppercase;
+}
+
+.divider__axis_x {
+    margin-block: 4rem;
 }
